[gd_scene load_steps=4 format=2]

[ext_resource path="res://Laser_obj.gd" type="Script" id=1]
[ext_resource path="res://art/laser_beam.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 312, 6.43319 )

[node name="Laser_obj" type="Area2D"]

z_index = 1
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Z Index" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 296, 1.19209e-06 )
scale = Vector2( 78, 1.6 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Tween" type="Tween" parent="." index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

position = Vector2( 296, 0 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="activetimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Laser_obj_body_entered"]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]

[connection signal="timeout" from="activetimer" to="." method="_on_activetimer_timeout"]


